--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["es5", "dom"],
     "types": ["cypress"],
     "resolveJsonModule": true,
+    "baseUrl":"./"
   },
   "include": [
     "**/*.ts",
